# scroll-proving-sdk

./: .gitignore  Cargo.toml  LICENSE  ct.yaml  readme.md  rust-toolchain.toml
.github/workflows/: docker-build.yml  publish-chart.yaml  publish-dev-chart.yaml  rust.yml
charts/scroll-proving-sdk/: Chart.yaml  README.md  example-config.yaml  index.yaml  values.yaml
charts/scroll-proving-sdk/templates/: common.yaml  config-file.yaml  helpers.tpl
charts/scroll-proving-sdk/values/: production.yaml
conf/: config.json  config_cloud.json  config_local.json
docker/: Dockerfile.cloud  cloud.Dockerfile
examples/: cloud.rs  local.rs
src/: config.rs  db.rs  lib.rs  manager.rs  tracing_handler.rs  utils.rs
src/coordinator_handler/: api.rs  coordinator_client.rs  key.rs  key_signer.rs  mod.rs  types.rs
src/prover/: builder.rs  common.rs  mod.rs  proving_service.rs  types.rs  worker.rs
src/proving_service/: local.rs  mod.rs  sindri.rs  snarkify.rs  types.rs
temp/: Dockerfile  sdk_prover_run.sh
