[package]
name = "scroll-proving-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.3"
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-providers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
http = "1.1.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["gzip"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
rlp = "0.5.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tiny-keccak = { version = "2.0.0", features = ["sha3", "keccak"] }
tokio = "1.37.0"